@@ -144,7 +144,7 @@ LMaster::LMaster()
 
 LMaster::~LMaster()
       {
-      undoRedo->removeFrom(tools);
+      //undoRedo->removeFrom(tools);  // p4.0.6 Removed
       }
 
 //---------------------------------------------------------
