@@ -234,7 +234,7 @@ MasterEdit::MasterEdit()
 
 MasterEdit::~MasterEdit()
       {
-      undoRedo->removeFrom(tools);
+      //undoRedo->removeFrom(tools);  // p4.0.6 Removed
       }
 
 //---------------------------------------------------------
