@@ -475,7 +475,7 @@ void DrumEdit::setTime(unsigned tick)
 
 DrumEdit::~DrumEdit()
       {
-      undoRedo->removeFrom(tools);
+      //undoRedo->removeFrom(tools);   // p4.0.6 Removed
       }
 
 //---------------------------------------------------------
