@@ -417,7 +417,7 @@ void PianoRoll::setTime(unsigned tick)
 
 PianoRoll::~PianoRoll()
       {
-      undoRedo->removeFrom(tools);
+      // undoRedo->removeFrom(tools);  // p4.0.6 Removed
       }
 
 //---------------------------------------------------------
