@@ -1,6 +1,7 @@
 21.10.2010  Toolbar1 usage of Q3ListBox changed to QTableWidget. (p4.0.3 Tim)
             More Toolbar1 fixes. (p4.0.4 Tim)
             Fixed widgets/tools.cpp EditToolBar::EditToolBar connect Q3Action. (p4.0.5 Tim)
+            Crashes: Removed all "undoRedo->removeFrom..." from destructors (~pianoroll() ~drumedit() etc.) (p4.0.6 Tim)
 20.10.2010
       * Fixed: cmake should work now. (T356)
         - Changed the QT4_WRAP_UI3 macro to generate  <filename>.h  instead of  ui_<filename>.h
